prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-server
  labels:
    app: notification-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-server
  template:
    metadata:
      labels:
        app: notification-server
    spec:
      imagePullSecrets:
        - name: facegram-registery
      containers:
        - name: notification-server
          image: ""
          ports:
            - containerPort: 30000
